methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:35: error: 'while' expected but '}' found.
    } while( estSurBiscuit()==false)
    ^SlugHunting:35: error: ';' expected but 'while' found.
    } while( estSurBiscuit()==false)
      ^